--- a/AlertView/src/main/res/layout/action_layout_dark.xml
+++ b/AlertView/src/main/res/layout/action_layout_dark.xml
@@ -8,6 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:alpha="0.05"
+            android:id="@+id/tvSeparator"
             android:background="@color/white" />
 
     <androidx.appcompat.widget.AppCompatTextView
