--- a/AlertView/src/main/res/layout/action_layout_light.xml
+++ b/AlertView/src/main/res/layout/action_layout_light.xml
@@ -8,6 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:alpha="0.2"
+            android:id="@+id/tvSeparator"
             android:background="@color/black" />
 
     <androidx.appcompat.widget.AppCompatTextView
