--- a/AlertView/src/main/res/layout/alert_layout_dark.xml
+++ b/AlertView/src/main/res/layout/alert_layout_dark.xml
@@ -16,6 +16,7 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/tvHeader"
                 android:orientation="vertical"
                 android:paddingBottom="20dp"
                 android:paddingTop="20dp">
