--- a/AlertView/src/main/res/layout/action_sheet_layout_dark.xml
+++ b/AlertView/src/main/res/layout/action_sheet_layout_dark.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
+
     <LinearLayout
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="0dp"
+            android:layout_margin="16dp"
             android:layout_weight="1"
-            android:background="@drawable/alert_background_light"
+            android:background="@drawable/alert_background_dark"
             android:orientation="vertical">
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -19,16 +20,17 @@
                 android:orientation="vertical"
                 android:paddingBottom="20dp"
                 android:paddingTop="20dp">
+
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="bold"
+                    android:fontFamily="@font/roboto_regular"
                     android:gravity="center"
                     android:paddingEnd="16dp"
                     android:paddingStart="16dp"
-                    android:textColor="@color/titleColor"
-                    android:textSize="16sp"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     tools:text="Delete" />
 
@@ -42,23 +44,40 @@
                     android:gravity="center"
                     android:paddingEnd="16dp"
                     android:paddingStart="16dp"
-                    android:textColor="@color/messageColor"
-                    android:textSize="14sp"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
                     tools:text="This photo will be deleted from all of your devices" />
         </LinearLayout>
 
-        <GridLayout
-                android:id="@+id/gridLayout"
+        <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:layout_marginStart="0dp"
-                android:layout_marginEnd="0dp"
-                android:columnCount="1"
-                android:useDefaultMargins="false">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                tools:ignore="NestedWeights">
 
-        </GridLayout>
-
+            <LinearLayout
+                    android:id="@+id/actionsLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+        </ScrollView>
     </LinearLayout>
 
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvCancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/alert_background_dark"
+            android:fontFamily="@font/roboto_regular"
+            android:gravity="center"
+            android:paddingBottom="20dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:paddingTop="20dp"
+            android:text="@string/cancel"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 </LinearLayout>
