--- a/AlertView/src/main/res/layout/alert_layout_two_button_light.xml
+++ b/AlertView/src/main/res/layout/alert_layout_two_button_light.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -54,8 +53,65 @@
                 android:layout_marginTop="0dp"
                 android:layout_marginStart="0dp"
                 android:layout_marginEnd="0dp"
-                android:columnCount="1"
+                android:columnCount="2"
                 android:useDefaultMargins="false">
+
+            <LinearLayout
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:orientation="vertical">
+                <View
+                        android:layout_width="200dp"
+                        android:layout_height="0.5dp"
+                        android:alpha="0.2"
+                        android:id="@+id/tvSeparator"
+                        android:background="@color/black" />
+                <TextView
+                        android:id="@+id/primaryText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="16dp"
+                        android:paddingEnd="16dp"
+                        android:paddingStart="16dp"
+                        android:text="确认"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="16sp"
+                />
+
+            </LinearLayout>
+
+            <FrameLayout
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:orientation="vertical">
+                <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="53dp"
+                        android:alpha="0.2"
+                        android:id="@+id/verticalSeparator"
+                        android:background="@color/black" />
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:alpha="0.2"
+                        android:id="@+id/tvSeparator2"
+                        android:background="@color/black" />
+                <TextView
+                        android:id="@+id/secondaryText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="16dp"
+                        android:paddingEnd="16dp"
+                        android:paddingStart="16dp"
+                        android:text="取消"
+                        android:textColor="@android:color/holo_red_dark"
+                        android:textSize="16sp"
+                />
+            </FrameLayout>
 
         </GridLayout>
 
